--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -192,6 +192,20 @@ body{
     font-size: 18px;
     margin-bottom: 20px;
 }
+
+#blocked{
+    width: 100vw;
+    height: 100vh ;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    cursor: progress;
+    display: none;
+    z-index: 1000;
+}
 @media (max-width:1600px){
     .new_acc{
         font-size: 15px;
