forgot password success

--- a/assets/css/forgot_password.css
+++ b/assets/css/forgot_password.css
@@ -40,6 +40,19 @@ form input {
 form input:focus-visible{
     outline: none;
 }
+form a {
+    text-decoration: none;
+    color: #1877f2;
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 15px;
+}
+form p {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    font-size: 13px;
+    width: 80%;
+}
 
 @media (max-width: 800px){
     .main{
@@ -49,5 +62,8 @@ form input:focus-visible{
 @media (max-width: 600px){
     .main{
         width: 250px;
+    }
+    form button{
+        font-size: 16px;
     }
 }
