--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,7 +3,7 @@ body{
 }
 .container{
     background-color: #f0f2f5;
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -14,6 +14,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 15vh;
 }
 .box_1{
     width: 50%;
