--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -89,7 +89,25 @@ body{
 .box1_search_mb{
     display: none;
 }
+.menu_mb_tab{
+    display: none;
+}
+.box3_signout{
+    height: 65%;
+    background-color: #f0f2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    padding: 7px;
+    margin-left: 7px;
+    text-decoration: none;
+    font-size: 14px;
+}
 @media (max-width:800px){
+    .box3_signout{
+        display: none;
+    }
     .box1_search{
         display: none;
     }
@@ -107,8 +125,80 @@ body{
     .box1_search_mb img{
         width: 30px;
     }
+    .menu_mb{
+        width: 37px;
+        height: 37px;
+        margin-left: 5px;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        padding: 5px;
+        background-color: #f0f2f5;
+        flex-direction: column;
+        margin-right: 3px;
+    }
+    .menu_mb_item{
+        height: 2px;
+        width: 90%;
+        background-color: black;
+        margin-top: 1.5px;
+        margin-bottom: 1.5px;
+    }
+    .menu_mb{
+        position: relative;
+    }
+    .menu_mb_tab{
+        width: 100px;
+        position: absolute;
+        display: none;
+        top: 30px;
+        right: 0;
+        background-color: #fff;
+        padding: 2px;
+        border-radius: 10px;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .menu_mb_tab::after{
+        content: '';
+        width: 50%;
+        height: 20px;
+        position: absolute;
+        top: -14px;
+        right: 0;
+    }
+    .menu_mb_tab a{
+        position: relative;
+        text-decoration: none;
+        color: #050505;
+        padding: 5px;
+        font-size: 13px;
+        width: 100%;
+        font-weight: 600;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    .menu_mb_tab a::before{
+        content: '';
+        position: absolute;
+        height: 1px;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        bottom: 0;
+    }
+    .menu_mb_tab a:hover{
+        background-color: #f0f2f5;
+    }
+    .menu_mb:hover .menu_mb_tab{
+        display: flex;
+    }
 }
 @media (max-width:600px){
+    .menu_mb{
+        width: 30px;
+        height: 30px;
+    }
     .header{
         height: 47px;
     }
@@ -147,6 +237,9 @@ body{
     }
 }
 @media (max-width:550px){
+    .box3{
+        justify-content: flex-end;
+    }
     .box3_user span{
         display: none;
     }
@@ -160,6 +253,7 @@ body{
         padding: 5px;
         background-color: #f0f2f5;
         flex-direction: column;
+        margin-right: 3px;
     }
     .menu_mb_item{
         height: 2px;
