--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -1,4 +1,4 @@
-.modal{
+#modal{
     width: 100vw;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.6);
@@ -13,7 +13,7 @@
     align-items: center;
     display: none;
 }
-.box_modal{
+#box_modal{
     background-color: white;
     border-radius: 6px;
     box-shadow: 0 2px 4px rgb(0 0 0 / 10%), 0 8px 16px rgb(0 0 0 / 10%);
